168309919 Common compress jar in PlatformUI 3 and remove qurtz from webhook engine